@@ -113,7 +113,8 @@ class ObjectResolver {
 
 		List<Persistent> results = new ArrayList<>(rows.size());
 		for (DataRow row : rows) {
-			// nulls are possible here since 3.0 for soem varieties of EJBQL
+			// nulls are possible here since 3.0 for some varieties of EJBQL,
+			// simple example of this: "select p.toGallery+ from Painting p" where toGallery is null.
 			results.add(objectFromDataRow(row));
 		}
 
@@ -212,6 +213,9 @@ class ObjectResolver {
 
 			// this is possible when processing left outer joint prefetches
 			if (val == null) {
+				if(!dataRow.containsKey(key)) {
+					throw new CayenneRuntimeException("No PK column '%s' found in data row.", key);
+				}
 				return null;
 			}
 
@@ -230,6 +234,9 @@ class ObjectResolver {
 
 			// this is possible when processing left outer joint prefetches
 			if (val == null) {
+				if(!dataRow.containsKey(key)) {
+					throw new CayenneRuntimeException("No PK column '%s' found in data row.", key);
+				}
 				return null;
 			}
 
